<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_screen">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            style="@style/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_ios" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_text"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ic_back" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/line"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="@dimen/padding_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_language"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/group_root"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2">

                    <RadioButton
                        android:id="@+id/rb_arabic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/arabic" />

                    <RadioButton
                        android:id="@+id/rb_english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english" />

                </RadioGroup>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="@dimen/padding_large">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_reminder"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/group_root2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2">

                    <RadioButton
                        android:id="@+id/rb_morning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/morning" />

                    <RadioButton
                        android:id="@+id/rb_afternoon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/afternoon" />

                    <RadioButton
                        android:id="@+id/rb_evening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/evening" />


                </RadioGroup>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/button"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_four_light_blue"
            android:backgroundTint="@color/light_shade_blue"
            android:gravity="center"
            android:padding="@dimen/padding_medium"
            android:layout_margin="50dp"
            android:text="@string/okay"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>