<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_large">


        <TextView
            android:id="@+id/textView64"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/circle_blue"
            android:backgroundTint="#5994d5"
            android:gravity="center"

            android:text="@string/one"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:text="@string/start_by_identifying_your_emotion"
            android:textColor="#193453"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView64"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/corner_four_gray"
            android:hint="@string/write_here"
            android:padding="@dimen/margin_large"
            app:layout_constraintEnd_toEndOf="@+id/textView65"
            app:layout_constraintStart_toStartOf="@+id/textView65"
            app:layout_constraintTop_toBottomOf="@+id/textView65" />

</androidx.constraintlayout.widget.ConstraintLayout>